copy and folder structure before optimization

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 [Rr]ay Tracing/[Rr]ay Tracing/cache*
 [Rr]ay Tracing/[Rr]ay Tracing/call*
 [Tt]esting/
+[Rr]ay Tracing/Latex/
 
 # User-specific files
 *.rsuser
