--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 [Rr]ay Tracing/[Rr]ay Tracing/cache*
 [Rr]ay Tracing/[Rr]ay Tracing/call*
 [Tt]esting/
-[Rr]ay Tracing/Latex/
+[Ll]atex/
 
 # User-specific files
 *.rsuser
