--- a/Ray Tracing/Optimized/Ray Tracing/Ray Tracing.vcxproj
+++ b/Ray Tracing/Optimized/Ray Tracing/Ray Tracing.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mainThreading.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h" />
